# Custom-Council

./: README.md  config.yml  dev.py  pyproject.toml  start_council_ui.bat
council_orchestrator/: __init__.py  config.py  config_overrides.py  main.py  schemas.py  skill_catalog.py
council_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
council_orchestrator/api/: __init__.py  app.py  routes.py  run_store.py
council_orchestrator/approval/: __init__.py  gate.py
council_orchestrator/council/: __init__.py  engine.py
council_orchestrator/engines/: __init__.py  base.py  litellm_engine.py  opencode_engine.py
council_orchestrator/executor/: __init__.py  aider_agent.py  base.py  opencode_agent.py
council_orchestrator/mcp/: __init__.py  client.py  http_client.py  registry.py  service.py  stdio_client.py
council_orchestrator/services/: __init__.py  approval_service.py  assignment_service.py  execution_service.py  mcp_approval_service.py  qa_service.py  task_service.py
council_orchestrator/storage/: repositories.py
council_orchestrator/testing/: runner.py
council_orchestrator/workspace/: git.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/agents/: page.tsx
web/src/app/mcp/: page.tsx
web/src/app/runs/[id]/: page.tsx
web/src/app/skills/: page.tsx
web/src/app/tasks/[id]/: page.tsx
web/src/components/: ApprovalBar.tsx  MarkdownRenderer.tsx  MemberResult.tsx  Navbar.tsx  RankingChart.tsx  StageCard.tsx  StatusBadge.tsx
web/src/lib/: api.ts
